Added model explorer window

--- a/CanvasDragNDrop/CanvasDragNDrop.csproj
+++ b/CanvasDragNDrop/CanvasDragNDrop.csproj
@@ -12,6 +12,8 @@
     <None Remove="Resources\arrow_down.png" />
     <None Remove="Resources\Arrow_Up.png" />
     <None Remove="Resources\delete.png" />
+    <None Remove="Resources\folder.png" />
+    <None Remove="Resources\model.png" />
     <None Remove="Resources\светлая стрелка.png" />
     <None Remove="Resources\стре.png" />
   </ItemGroup>
@@ -28,6 +30,12 @@
     <Resource Include="Resources\arrow_down.png" />
     <Resource Include="Resources\arrow_up.png" />
     <Resource Include="Resources\delete.png" />
+    <Resource Include="Resources\folder.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Resources\model.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Resource>
     <Resource Include="Resources\светлая стрелка.png" />
     <Resource Include="Resources\стре.png" />
   </ItemGroup>
