--- a/CanvasDragNDrop/CanvasDragNDrop.csproj
+++ b/CanvasDragNDrop/CanvasDragNDrop.csproj
@@ -13,6 +13,7 @@
     <None Remove="Resources\Arrow_Up.png" />
     <None Remove="Resources\delete.png" />
     <None Remove="Resources\folder.png" />
+    <None Remove="Resources\garbage.png" />
     <None Remove="Resources\model.png" />
     <None Remove="Resources\светлая стрелка.png" />
     <None Remove="Resources\стре.png" />
@@ -31,6 +32,9 @@
     <Resource Include="Resources\arrow_up.png" />
     <Resource Include="Resources\delete.png" />
     <Resource Include="Resources\folder.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Resources\garbage.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Resource>
     <Resource Include="Resources\model.png">
