--- a/CanvasDragNDrop/CanvasDragNDrop.csproj
+++ b/CanvasDragNDrop/CanvasDragNDrop.csproj
@@ -13,6 +13,7 @@
     <None Remove="Resources\arrow_down.png" />
     <None Remove="Resources\Arrow_Up.png" />
     <None Remove="Resources\delete.png" />
+    <None Remove="Resources\edit.png" />
     <None Remove="Resources\folder.png" />
     <None Remove="Resources\model.png" />
     <None Remove="Resources\ReadOnly.png" />
@@ -38,6 +39,9 @@
     <Resource Include="Resources\arrow_down.png" />
     <Resource Include="Resources\arrow_up.png" />
     <Resource Include="Resources\delete.png" />
+    <Resource Include="Resources\edit.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Resource>
     <Resource Include="Resources\folder.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Resource>
