Fixed saving of edited schema. Added reload schemas button.

--- a/CanvasDragNDrop/CanvasDragNDrop.csproj
+++ b/CanvasDragNDrop/CanvasDragNDrop.csproj
@@ -19,6 +19,7 @@
     <None Remove="Resources\ReadOnly.png" />
     <None Remove="Resources\settings.png" />
     <None Remove="Resources\setup.png" />
+    <None Remove="Resources\Sync.png" />
     <None Remove="Resources\version.png" />
     <None Remove="Resources\светлая стрелка.png" />
     <None Remove="Resources\стре.png" />
@@ -55,6 +56,9 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Resource>
     <Resource Include="Resources\setup.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Resources\sync.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Resource>
     <Resource Include="Resources\version.png">
